--- a/HPA_VPA/apache-vpa.yml
+++ b/HPA_VPA/apache-vpa.yml
@@ -1,13 +1,11 @@
 apiVersion: autoscaling.k8s.io/v1
 kind: VerticalPodAutoscaler
 metadata:
-  name: apache-vpa
-  namespace: default
+  name: apacha-hpa
 spec:
-  targetRef:
+  targetRef: # HPA replica target to our deployment, that's why we add apiVersion, kind, name of deployment here.
     apiVersion: apps/v1
     kind: Deployment
     name: apache-deployment
   updatePolicy:
-    updateMode: "Auto" # Options: "Off", "Initial", "Auto"
-
+    updateMode: "Auto"   #For Automatic Scaling
